--- a/index.html
+++ b/index.html
@@ -1,13 +1,29 @@
 <!DOCTYPE html>
 <html>
-    <head>
-        <title>Nosaukums</title>
-        <link href="style.css" rel="stylessheet"/>
-        <body>
-            <div class ="wrapper">
 
-            </div>
-            <script src="script.js"></script>
-        </body>
-    </head>
+<head>
+    <title>Nosaukums</title>
+    <link href="style.css" rel="stylessheet" />
+
+<body>
+    <div class="wrapper">
+        <table>
+            <thead>
+                <tr>
+                    <td>Nr</td>
+                    <td>Vārds</td>
+                </tr>
+            </thead>
+            <tbody class="rindas">
+                <tr>
+                    <td>1</td>
+                    <td>Vārds</td>
+                </tr>
+        </table>
+
+    </div>
+    <script src="script.js"></script>
+</body>
+</head>
+
 </html>
