--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
     
     <title>Nosaukums</title>
-    <link href="style.css" rel="stylessheet" />
+    <link href="style.css" rel="stylesheet" />
 
 <body>
     <div class="wrapper">
@@ -13,17 +13,21 @@
                 <tr>
                     <td>Nr.</td>
                     <td>Vārds</td>
+                    <td>Balvas</td>
                 </tr>
             </thead>
             <tbody class="rindas">
                 <tr>
                     <td>1</td>
                     <td>Vārds</td>
+                    <td>Balvas</td>
                 </tr> 
         </table>
 
-    </div>
+    </div>  
+    <img src= "https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT-lTQXC49jd2sWy7ZCaK1ofgS0wLbvy1V87X6lDDFlKd7O2MX3S7ZPa1fr7_mGkzD2318&usqp=CAU">
     <script src="script.js"></script>
+  
 </body>
 </head>
 
